syntax = "proto3";

package event;

option go_package =  "github.com/lzkking/edr/proto";

message PackagedData {
  repeated EncodedRecord records = 1;
  string agent_id = 2;
  repeated string intranet_ipv4 = 3;
  repeated string extranet_ipv4 = 4;
  repeated string intranet_ipv6 = 5;
  repeated string extranet_ipv6 = 6;
  string hostname = 7;
  string version = 8;
  string product = 9;
}

message EncodedRecord {
  int32 data_type = 1;
  int64 timestamp = 2;
  bytes data = 3;
}
message Record {
  int32 data_type = 1;
  int64 timestamp = 2;
  Payload data = 3;
}

message Payload { map<string, string> fields = 1; }

//server --> agent
message Command {
  int32 AgentCtrl = 1; // Agent control command
  PluginTask Task = 2; // Agent task
  repeated ConfigItem Config = 3; // Plugin/Agent-host config
}

message PluginTask{
  //DataType which used to uniquely identify different  format of Data
  int32 DataType = 1;
  // Plugin name, which used to uniquely identify different plugins
  string Name = 2;
  // Data transparently transmitted to the plugin
  string Data = 3;
  // The token is used for reconciliation
  string Token = 4;
}

message ConfigItem{
  string Name = 1;
  string Type = 2;
  string Version = 3;
  string SHA256 = 4;
  string Signature = 5;
  repeated string DownloadURL = 6;
  string Detail = 7;
}

service Service {
  rpc Transfer(stream PackagedData) returns (stream Command);
}